# Aoptimize

./: .gitignore  CMakeLists.txt  LinesDistanceCost.h  PointAtAxisLineCost.h  PointDistanceCost.h  PointsAtTheSameZLineCost.h  PointsAxisDistance.h  ValueDiffCost.h  common.h  data.h  main.cpp  plain.cpp  points_distance.cpp  seperate_lines.cpp  two_camera.cpp
plot/: CMakeLists.txt
res/extrinsic_use/: points.yaml  points2.yaml  points3.yaml  points4.yaml  points_20200518_D.yaml  points_20200521_D.yaml  points_test.yaml
